@@ -1,3 +1,8 @@
+2012-11-05  Simson Garfinkel  <simsong@npsair.local>
+
+	* src/main.cpp (main): print_usage() renamed usage() for consistency with bulk_extractor
+	(usage): usage made static
+
 2012-10-28  Simson Garfinkel  <simsong@npsair.local>
 
 	* src/pcb_timehistogram.cpp: made histograms static
